# multiplierless-rs

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  llvm-cov.yml
src/: lib.rs  lowpass_oracle.rs  lowpass_oracle_q.rs  main.rs  spectral_fact.rs
tests/: test_filter_construct.rs  test_lowpass.rs  test_spectral_fact.rs
