[package]
name = "multiplierless-rs"
version = "0.1.1"
edition = "2021"
description = "Multiplierless FIR Filter optimization (using Ellipsoid Method) — Rust port"
repository = "https://github.com/luk036/multiplierless-rs"
license = "MIT OR Apache-2.0"

[dependencies]
ellalgo-rs = "0.1.8"
csd-rs = "0.1.6"
ginger-rs = "0.1.5"
rustfft = "6.2"
realfft = "3.0"
num-complex = "0.4"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
approx_eq = "0.1.8"

[[bin]]
name = "multiplierless"
path = "src/main.rs"
